# GIS-Course-Project

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  test_hello.py  test_push.py
app/: __init__.py  main_window.py
app/application/: __init__.py  analysis_environment.py  errors.py  gis_application.py  ports.py  results.py
app/domain/: __init__.py  feature.py  layer_style.py  map_document.py  raster_layer.py  spatial_layer.py  vector_layer.py
app/infrastructure/: __init__.py
app/infrastructure/file_io/: __init__.py  auto_reader.py  auto_writer.py  geopandas_vector_reader.py  geopandas_vector_writer.py  rasterio_raster_reader.py  rasterio_raster_writer.py
app/models/: __init__.py  feature.py  layer.py  raster_layer.py
app/presentation/: main_window.py
app/services/: __init__.py  analysis_service.py  database_service.py  file_service.py  query_service.py
app/widgets/: __init__.py  layer_panel.py  map_canvas.py  right_panel.py  workbench_header.py
docs/: GIS原理课设设计文档-完善版.md  GIS原理课设设计文档.md  GIS课设小组分工表.docx  分工文档.md  指导书-版本1.docx
tests/: test_map_canvas.py  test_workbench_ui.py
tests/application/: test_crs_workflow.py  test_gis_application.py
tests/domain/: test_map_document.py  test_vector_layer.py
tests/infrastructure/: test_geopandas_vector_reader.py  test_geopandas_vector_writer.py  test_rasterio_raster_reader.py  test_rasterio_raster_writer.py
tests/presentation/: test_crs_display.py  test_dialog_styling.py  test_layer_panel.py  test_main_window_layer_lifecycle.py  test_qt_vector_renderer.py
(+14 files in other folders)
